[package]
name = "calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["random_ast"]
random_ast = ["dep:arbitrary"]

[dependencies]
arbitrary = { version = "1.3.0", features = ["derive"], optional = true }
clap = { version = "4.3.23", features = ["derive"] }
logos = "0.13.0"
rand = "0.8.5"
rustyline = "12.0.0"

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "asd"
harness = false
